# vow

./: .gitignore  .gitmodules  AGENTS.md  README.md  package.json
.github/workflows/: deploy-web.yml  test.yml
anchor/: .gitignore  AGENTS.md  Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
anchor/crates/vow-lib/: Cargo.toml
anchor/crates/vow-lib/src/: borsh.rs  crypto.rs  directory.rs  errors.rs  lib.rs  vow.rs
anchor/migrations/: deploy.ts
anchor/programs/mock-vow-lib/: Cargo.toml
anchor/programs/mock-vow-lib/src/: lib.rs
anchor/tests/: vow.test.ts
sdk/: package.json  tsconfig.json
sdk/src/: contracts.ts  encoding.ts  index.ts  merkle.ts  orchestration.ts  signing.ts  types.ts  vow.ts  witness.ts
solana/: Anchor.toml  Cargo.toml  README.md  package.json
solana/programs/vow/: Cargo.toml
solana/programs/vow/src/: crypto.rs  directory.rs  errors.rs  lib.rs  vow.rs
solana/tests/: vow.ts
solidity/: .gas-snapshot  AGENTS.md  README.md  foundry.toml  remappings.txt
solidity/script/: Deploy.s.sol  DeployForTest.s.sol
solidity/src/: BorshLib.sol  IWitnessDirectory.sol  VowLib.sol  WitnessDirectory.sol
solidity/test/: BorshDecoderLib.t.sol  GasEstimate.t.sol  VowCompression.t.sol  VowLib.t.sol  WitnessDirectory.t.sol
typescript/: README.md  package.json  tsconfig.build.json  tsconfig.json
typescript/src/: chain.ts  contracts.ts  events.ts  index.ts  merkle.ts  (+4 more)
web/: .gitignore  .prettierignore  AGENTS.md  eslint.config.js  package.json  playwright.config.ts  svelte.config.js
witness/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.production.yml  docker-compose.yml  package.json  vow-witness-service-implementation-plan.md
(+102 files in other folders)
