[package]
name = "mock-vow-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "mock_vow_lib"
crate-type = ["cdylib", "lib"]
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
solana-program = { workspace = true }
vow-lib = { workspace = true }
